--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,18 @@ buildscript {
         mavenCentral()
         jcenter()
     }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
+    }
 }
 
+apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'application'
 apply plugin: 'java'
+
+sourceCompatibility = 1.8
+
+mainClassName = 'org.aaron.netty.http.HttpStaticFileServer'
 
 repositories {
     mavenCentral()
