--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext {
+        kotlin_version = '1.3.21'
         netty_version = '4.1.34.Final'
     }
 
@@ -11,25 +12,36 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
     }
 }
 
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'application'
+apply plugin: 'kotlin'
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
-mainClassName = 'org.aaron.netty.http.HttpStaticFileServer'
+mainClassName = 'org.aaron.netty.http.HttpServerMainKt'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "io.netty:netty-all:$netty_version"
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "io.netty:netty-all:$netty_version"
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation group: 'io.github.microutils', name: 'kotlin-logging', version: '1.6.25'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
