--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,13 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext {
+        activation_version = '1.1.1'
+        junit_version = '4.12'
         kotlin_version = '1.3.21'
+        kotlin_logging_version = '1.6.25'
+        logback_version = '1.2.3'
         netty_version = '4.1.34.Final'
+        shadow_version = '5.0.0'
     }
 
     repositories {
@@ -13,7 +18,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
+        classpath "com.github.jengelman.gradle.plugins:shadow:$shadow_version"
     }
 }
 
@@ -31,11 +36,11 @@ repositories {
 
 dependencies {
     implementation "io.netty:netty-all:$netty_version"
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
+    implementation "ch.qos.logback:logback-classic:$logback_version"
+    implementation "javax.activation:activation:$activation_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation group: 'io.github.microutils', name: 'kotlin-logging', version: '1.6.25'
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation "io.github.microutils:kotlin-logging:$kotlin_logging_version"
+    testImplementation "junit:junit:$junit_version"
 }
 
 compileKotlin {
