--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '1.0-SNAPSHOT'
 buildscript {
     ext {
         activation_version = '1.1.1'
+        jackson_version = '2.9.8'
         junit_version = '4.12'
         kotlin_version = '1.3.21'
         kotlin_logging_version = '1.6.25'
@@ -35,6 +36,8 @@ repositories {
 }
 
 dependencies {
+    implementation "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_version"
     implementation "io.netty:netty-all:$netty_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "javax.activation:activation:$activation_version"
