--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '1.0-SNAPSHOT'
 buildscript {
     ext {
         activation_version = '1.1.1'
+        handlebars_version = '4.1.2'
         jackson_version = '2.9.8'
         junit_version = '4.12'
         kotlin_version = '1.3.21'
@@ -36,6 +37,7 @@ repositories {
 }
 
 dependencies {
+    implementation "com.github.jknack:handlebars:$handlebars_version"
     implementation "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_version"
     implementation "io.netty:netty-all:$netty_version"
