--- a/config.json
+++ b/config.json
@@ -2,5 +2,8 @@
   "server_info": {
     "listen_address": "0.0.0.0",
     "listen_port": 8080
+  },
+  "main_page_info": {
+    "title": "Hello World"
   }
 }
