--- a/config.json
+++ b/config.json
@@ -17,13 +17,15 @@
       "url": "/style.css",
       "file_path": "/static/style.css",
       "classpath": true,
-      "content_type": "text/css"
+      "content_type": "text/css",
+      "include_in_main_page": false
     },
     {
       "url": "/favicon.ico",
       "file_path": "/static/favicon.ico",
       "classpath": true,
-      "content_type": "image/x-icon"
+      "content_type": "image/x-icon",
+      "include_in_main_page": false
     }
   ],
   "command_info": [
