--- a/apu2-config.json
+++ b/apu2-config.json
@@ -1,7 +1,8 @@
 {
   "server_info": {
     "listen_address": "192.168.1.1",
-    "listen_port": 8000
+    "listen_port": 8000,
+    "tcp_no_delay": true
   },
   "main_page_info": {
     "title": "Aaron's APU2"
