--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
   "server_info": {
     "listen_address": "0.0.0.0",
-    "listen_port": 8080
+    "listen_port": 8080,
+    "tcp_no_delay": true
   },
   "main_page_info": {
     "title": "Hello World"
