--- a/raspberrypi-config.json
+++ b/raspberrypi-config.json
@@ -1,7 +1,8 @@
 {
   "server_info": {
     "listen_address": "0.0.0.0",
-    "listen_port": 8000
+    "listen_port": 8000,
+    "tcp_no_delay": true
   },
   "main_page_info": {
     "title": "Aaron's Raspberry Pi"
