--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
         junit_version = '4.12'
         kotlin_version = '1.3.21'
         kotlin_logging_version = '1.6.25'
-        logback_version = '1.2.3'
+        lmax_version = '3.4.2'
+        log4j_version = '2.11.1'
         netty_version = '4.1.34.Final'
         shadow_version = '5.0.0'
     }
@@ -40,7 +41,8 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_version"
     implementation "io.netty:netty-all:$netty_version"
-    implementation "ch.qos.logback:logback-classic:$logback_version"
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4j_version}"
+    implementation group: 'com.lmax', name: 'disruptor', version: "${lmax_version}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "io.github.microutils:kotlin-logging:$kotlin_logging_version"
     testImplementation "junit:junit:$junit_version"
