Spint debug handlers into html and apis.

--- a/config.json
+++ b/config.json
@@ -15,6 +15,12 @@
       "content_type": "application/javascript"
     },
     {
+      "url": "/debug.js",
+      "file_path": "/static/debug.js",
+      "classpath": true,
+      "content_type": "application/javascript"
+    },
+    {
       "url": "/style.css",
       "file_path": "/static/style.css",
       "classpath": true,
